first commit from vsstudiocode take 2 hopefully it works

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -94,14 +95,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                WHO WE ARE?
+                More about me.
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrudLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud
+              I am a rising senior pursuing a degree in Computer Science at the University of Wisconsin - Madison. 
             </p>
             <div>
               <a href="">
