--- a/index.html
+++ b/index.html
@@ -27,6 +27,37 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+
+
+  <style>
+    /* Neon yellow border for the whole page */
+    body {
+      border: 5px solid neonyellow;
+      padding: 10px;
+    }
+
+    /* Dark green border on the top */
+    .header_section {
+      border-top: 10px solid darkgreen;
+    }
+
+    /* Circular/oval buttons */
+    .btn_on-hover, .nav-link, .carousel-item a {
+      border-radius: 50px; /* Makes the button oval */
+      padding: 10px 20px;
+      background-color: #333; /* Dark background to show contrast */
+      color: #fff;
+      border: 2px solid neonyellow;
+      text-decoration: none;
+    }
+
+    .btn_on-hover:hover, .nav-link:hover, .carousel-item a:hover {
+      background-color: neonyellow;
+      color: #333;
+      border: 2px solid #333;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -97,11 +128,13 @@
 
                       </h2>
                       <h1>
-                        web agency
+                        My Website
                       </h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
+                        My name is Thomas Sun and I welcome you to my website! I am a rising senior pursuing a
+                        degree in Computer Science at the University of Wisconsin - Madison.
+                        I'm a motivated and dedicated individual with a keen interest in AI, software engineering, and cybersecurity.
+                        I enjoy exploring new ideas and developing skills to gain practical experience for working in the field.
                       </p>
                       <div class="">
                         <a href="">
@@ -179,61 +212,60 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          What we do
+          Languages Spoken
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna
+          Below outlines five of the programming languages I am most fluent in.
         </p>
       </div>
       <div class="do_container">
         <div class="box arrow-start arrow_bg">
           <div class="img-box">
-            <img src="images/d-1.png" alt="">
+            <img src="images/pythonlogo2b&w.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Marketing
+              Python
             </h6>
           </div>
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-2.png" alt="">
+            <img src="images/Clogotest1.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Development
+              C
             </h6>
           </div>
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-3.png" alt="">
+            <img src="images/javalogo1b&w.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Html5
+              Java
             </h6>
           </div>
         </div>
         <div class="box arrow-end arrow_bg">
           <div class="img-box">
-            <img src="images/d-4.png" alt="">
+            <img src="images/csslogob&w.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Css
+              CSS
             </h6>
           </div>
         </div>
         <div class="box ">
           <div class="img-box">
-            <img src="images/d-5.png" alt="">
+            <img src="images/sqllogob&w.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Wordpress
+              SQL
             </h6>
           </div>
         </div>
